Revision history for Dancer-Template-Tenjin

{{$NEXT}}

0.4       2010-08-06 21:45:35 Asia/Jerusalem
	- Updated module to reflect changes in Dancer
	- Added a simple test (thanks to Franck Cuny)
	- Fixed bug where path to template directory was not set as an array-ref
	- Module catches rendering errors with Try::Tiny (and rethrows them)
	- Migrated distribution to use Dist::Zilla

0.3	2010-02-22, 14:45:00
	- Removed boilerplate test, it's only a starters test
	- Entered filter for manifest.t to ignore .git folder
	- Removed PREREQ_PM for Dancer::ModuleLoader, it's included in Dancer core
	- Removed "use Dancer::ModuleLoader" and ModuleLoader loading of Tenjin
	  (should only be used for things in Dancer core)
	- Added simple "use Tenjin" to get compile-time benefits and correct usage
	- Replaced ignore.txt with .gitignore

0.2	2010-02-19, 22:20:00
	- Added prerequisites for the Makefile
	- Added pod documentation for the module's methods

0.1	2010-02-18, 12:35:00
        - Initial version with support for tenjin template files.