@@ -1,5 +1,4 @@
 name    = Dancer-Template-Tenjin
-version = 0.4
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
