@@ -3,8 +3,7 @@
 use Test::More tests => 1;
 
 BEGIN {
-    use_ok( 'Dancer::Template::Tenjin' ) || print "Bail out!
-";
+	use_ok( 'Dancer::Template::Tenjin' ) || print "Bail out!\n";
 }
 
 diag( "Testing Dancer::Template::Tenjin $Dancer::Template::Tenjin::VERSION, Perl $], $^X" );
