@@ -1,0 +1,1 @@
+מי שלא שותה לא משתין
